--- a/Week 1/Week 1 Capstone Project.ipynb
+++ b/Week 1/Week 1 Capstone Project.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>IBM Data Science Capstone Project</h1>\n",
+    "<h1><font size=\"5\">IBM Data Science Capstone Project</font></h1>\n",
     "This notebook will be mainly used for the capstone project"
    ]
   },
