--- a/Week 3/Part 3 - Segmenting and Clustering Neighborhoods in Toronto.ipynb
+++ b/Week 3/Part 3 - Segmenting and Clustering Neighborhoods in Toronto.ipynb
@@ -6276,6 +6276,13 @@
    "source": [
     "scarborough_merged.loc[scarborough_merged['Cluster Labels'] == 4, scarborough_merged.columns[[0] + list(range(5, scarborough_merged.shape[1]))]]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conclusion: In this project, using k-means cluster algorithm I separated the crime incident into 10(Ten) different clusters and for 2150 different lattitude and logitude from dataset, which have very-similar crime incidents around them. Using the charts above results presented to a particular neighborhood based on average house prices and school rating have been made."
+   ]
   }
  ],
  "metadata": {
