--- a/Week 5/Nearest venues based on crime incidents in Toronto.ipynb
+++ b/Week 5/Nearest venues based on crime incidents in Toronto.ipynb
@@ -1,6 +1,138 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Capstone Project – The Battle of Neighborhoods | Finding a Nearest Place Based Crime Data in Toronto, Ontario"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Introduction:\n",
+    "\n",
+    "The purpose of this Project is to analyze crime incident around their venue. It will help people understanding which venue that have a high rate of crime in Toronto, Ontario, Canada.\n",
+    "\n",
+    "This Project aim to create an analysis of features for a person to be carefully at venues as a comparative analysis between crimes incident place. The features include crime place, crime rates, date of incident. It will help people to anticipate possibility of crime near venues.\n",
+    "\n",
+    "\n",
+    "\n",
+    "## 2. Data Section\n",
+    "\n",
+    "Data Link: https://www.kaggle.com/kapastor/toronto-police-data-crime-rates-by-neighbourhood\n",
+    "\n",
+    "Will use Toronto Police dataset which we downloaded from kaggle. Dataset consisting of latitude and longitude, years of incident, crime category.\n",
+    "\n",
+    "\n",
+    "#### Foursquare API Data:\n",
+    "\n",
+    "We will need data about venues based on Toronto crime data. \n",
+    "In order to gain that information we will use \"Foursquare\" locational information. Foursquare is a location data provider with information about all manner of venues and events within an area of interest. Such information includes venue names, locations, menus and even photos. As such, the foursquare location platform will be used as the sole data source since all the stated required information can be obtained through the API. \n",
+    "\n",
+    "After finding the list of venues, we then connect to the Foursquare API to gather information about venues inside each and every crime incident. For each crime incident, we have chosen the radius to be 100 meter.\n",
+    "\n",
+    "The data retrieved from Foursquare contained information of venues within a specified distance of the longitude and latitude of Toronto Police dataset. The information obtained per venue as follows:\n",
+    "\n",
+    "    1. Neighborhood\n",
+    "    2. Neighborhood Latitude\n",
+    "    3. Neighborhood Longitude\n",
+    "    4. Venue\n",
+    "    5. Name of the venue e.g. the name of a store or restaurant\n",
+    "    6. Venue Latitude\n",
+    "    7. Venue Longitude\n",
+    "    8. Venue Category\n",
+    "    \n",
+    "\n",
+    "## 3. Methodology Section\n",
+    "\n",
+    "#### Clustering Approach:\n",
+    "To compare the similarities of two regions, we decided to explore neighborhoods, segment them, and group them into clusters to find similar neighborhoods in a big city like New York and San Francisco. To be able to do that, we need to cluster data which is a form of unsupervised machine learning: k-means clustering algorithm\n",
+    "\n",
+    "\n",
+    "**Find the best K for K-Means with Elbow Method**\n",
+    "\n",
+    "<img src=\"images/Elbow_method_for_optimal_K.png\">\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Work Flow:\n",
+    "Using credentials of Foursquare API features of near-by places of the neighborhoods would be mined. Due to http request limitations the number of places per neighborhood parameter would reasonably be set to 1000 and the radius parameter would be set to 100.\n",
+    "\n",
+    "\n",
+    "## 4. Results Section\n",
+    "\n",
+    "**Map of Neighborhood in Toronto**\n",
+    "<img src=\"images/Map_of_Neighborhood_in _Toronto.png\">\n",
+    "\n",
+    "\n",
+    "\n",
+    "**Neighborhood with Crime Rate Score in Toronto**\n",
+    "<img src=\"images/Neighborhood_with_Crime_Rate_Score_in_Toronto.png\">\n",
+    "\n",
+    "\n",
+    "\n",
+    "**Crime Incident places by Clusters in Toronto**\n",
+    "<img src=\"images/Crime_Incidents_location_by_Clusters_in_Toronto.png\">\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### The Location:\n",
+    "Scarborough is a popular destination for new immigrants in Canada to reside. As a result, it is one of the most diverse and multicultural areas in the Greater Toronto Area, being home to various religious groups and places of worship. Although immigration has become a hot topic over the past few years with more governments seeking more restrictions on immigrants and refugees, the general trend of immigration into Canada has been one of on the rise.\n",
+    "\n",
+    "#### Foursquare API:\n",
+    "This project have used Four-square API as its prime data gathering source as it has a database of millions of places, especially their places API which provides the ability to perform location search, location sharing and details about a business.\n",
+    "\n",
+    "\n",
+    "\n",
+    "## 5. Discussion Section\n",
+    "\n",
+    "#### Problem to be resolved:\n",
+    "The major purpose of this project, is to segment a crime incident arround Toronto which happen in 2019. It will help peoples to anticipate possibility of crime when they go to some venue.\n",
+    "\n",
+    "1. Which is the closest place to a crime?\n",
+    "2. What categories of crime are contain in each venues?\n",
+    "3. What is the most common crimes on each venues?\n",
+    "\n",
+    "\n",
+    "\n",
+    "## 6. Conclusion Section\n",
+    "\n",
+    "Conclusion: In this project, using k-means cluster algorithm I separated the crime incident into 10(Ten) different clusters and for 2150 different lattitude and logitude from dataset, which have very-similar crime incidents around them.\n",
+    "\n",
+    "I feel rewarded with the efforts and believe this course with all the topics covered is well worthy of appreciation.\n",
+    "This project has shown me a practical application to resolve a real situation that has impacting personal and safety impact using Data Science tools.\n",
+    "The mapping with Folium is a very powerful technique to consolidate information and make the analysis and decision better with confidence.\n",
+    "\n",
+    "\n",
+    "#### Future Works:\n",
+    "This project can be continued for making it more precise in terms to analyze crime incident in Toronto for the next year (2020/2021). \n",
+    "\n",
+    "\n",
+    "#### Libraries Used:\n",
+    "\n",
+    "> Pandas: For creating and manipulating dataframes.\n",
+    "\n",
+    "> Folium: Python visualization library would be used to visualize the neighborhoods cluster distribution of using interactive leaflet map.\n",
+    "\n",
+    "> Scikit Learn: For importing k-means clustering.\n",
+    "\n",
+    "> Geocoder: To retrieve Location Data.\n",
+    "\n",
+    "> Matplotlib & Seaborn: Python Plotting Module.\n",
+    "\n",
+    "> JSON: Library to handle JSON files."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Importing Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -17,6 +149,13 @@
     "import requests\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Data Extraction and Cleaning"
    ]
   },
   {
@@ -244,6 +383,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Count Empty Record"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -290,6 +436,13 @@
    ],
    "source": [
     "toronto_crime.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Drop unused dataframe column and drop duplicates"
    ]
   },
   {
@@ -535,6 +688,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remove number value from Neighbourhood column"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -546,6 +706,13 @@
     "toronto_crime['Neighbourhood'] = toronto_crime.Neighbourhood.str.replace('(\\(\\d\\d\\d\\d\\))', '')\n",
     "toronto_crime['Neighbourhood'] = toronto_crime.Neighbourhood.str.replace('-', ' ')\n",
     "toronto_crime['Neighbourhood'] = toronto_crime['Neighbourhood'].apply(lambda x: x.strip())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Select row with year 2019"
    ]
   },
   {
@@ -930,6 +1097,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Group dataframe based on Neighbourhood, Latitude, Longitude, and then join MCI/offence row with comma separated"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -1206,6 +1380,13 @@
    ],
    "source": [
     "toronto_crime19_grouped['Neighbourhood'].value_counts().head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get dummies from offence column for summing crime score"
    ]
   },
   {
@@ -1842,6 +2023,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get Toronto latitude and longitude using geolocator"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -1864,6 +2059,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import Open Cage Geocode library to retreive each latitude and longitude data from dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -1873,14 +2075,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calling for API"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "key = '5d969776b3614a239700bf12a9121c1e'  # get api key from:  https://opencagedata.com\n",
+    "key = '5d96xxxxxxxxxxxxxxxxxxx2a9121c1e'  # get api key from:  https://opencagedata.com\n",
     "\n",
     "geocoder = OpenCageGeocode(key)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make request to API"
    ]
   },
   {
@@ -2046,6 +2262,13 @@
    ],
    "source": [
     "toronto_crime19_score.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visalizing crime rate score with seaborn bar plot"
    ]
   },
   {
@@ -2225,6 +2448,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Map of Neighborhood in Toronto"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -2274,23 +2504,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your credentials:\n",
-      "CLIENT_ID: DJH0X00QRTV0NUBLUPUS4HVT5BKDU2RHSFFLI2UHLFIIT3H2\n",
-      "CLIENT_SECRET: OXDVPEOFIHQJIVTD2MTFTICDYPWDKRAQJC0FPATKBJBPZ4AK\n"
-     ]
-    }
-   ],
    "source": [
-    "CLIENT_ID = 'DJH0X00QRTV0NUBLUPUS4HVT5BKDU2RHSFFLI2UHLFIIT3H2'\n",
-    "CLIENT_SECRET = 'OXDVPEOFIHQJIVTD2MTFTICDYPWDKRAQJC0FPATKBJBPZ4AK'\n",
+    "Calling Foursquare API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CLIENT_ID = 'DJH0X00QRTxxxxxxxxxxxxxxxxxxxFLI2UHLFIIT3H2'\n",
+    "CLIENT_SECRET = 'OXDVPEOxxxxxxxxxxxxxxxxxxxxPWDKRAQJC0FPATKBJBPZ4AK'\n",
     "VERSION = '20180604'\n",
     "LIMIT = 30\n",
     "print('Your credentials:')\n",
@@ -2316,6 +2543,13 @@
     "    LIMIT\n",
     "    )\n",
     "results = requests.get(url).json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Nearby Venues/ Location"
    ]
   },
   {
@@ -2822,6 +3056,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Categories of Nearby Venues/Locations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -2968,6 +3209,13 @@
     "                             'Venue Longitude',\n",
     "                             'Venue Category']\n",
     "    return(nearby_venues)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Due the limitation in the Foursquare API call, we take 1000 data samples"
    ]
   },
   {
@@ -3133,6 +3381,13 @@
    "outputs": [],
    "source": [
     "toronto_crime19_venues.to_csv('toronto_crime19_venues_2.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load Neighborhood by nearby venues"
    ]
   },
   {
@@ -4632,6 +4887,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add offence column to Toronto Crime Venues dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 109,
    "metadata": {},
@@ -4791,6 +5053,13 @@
    ],
    "source": [
     "toronto_crime_venues.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Make onehot encoding for Venue Category"
    ]
   },
   {
@@ -5070,6 +5339,13 @@
    ],
    "source": [
     "toronto_crime19_onehot.drop('Crime Score', axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " #### let's group rows by neighborhood and by taking the mean of the frequency of occurrence of each category"
    ]
   },
   {
@@ -5581,6 +5857,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Write a function to sort the venues and crimes in descending order."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 117,
    "metadata": {},
@@ -5597,6 +5880,13 @@
     "    row_categories_sorted = row_categories.sort_values(ascending=False)\n",
     "    \n",
     "    return row_categories_sorted.index.values[0: num_top_crime]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  Create the new dataframe and display the top 10 venues for each neighborhood."
    ]
   },
   {
@@ -5768,6 +6058,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  Create the new dataframe and display the top 10 crimes for each neighborhood."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 119,
    "metadata": {},
@@ -5933,6 +6230,13 @@
     "for ind in np.arange(toronto_crime_onehot.shape[0]):\n",
     "    neighborhoods_crime_sorted.iloc[ind, 1:] = return_most_common_crime(toronto_crime19_onehot.iloc[ind, :], num_top_crime)\n",
     "neighborhoods_crime_sorted.head()    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Join Toronto Venues and Crime"
    ]
   },
   {
@@ -6189,6 +6493,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Clustering Approach"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find the best K for KMeans using Elbow Method"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 153,
    "metadata": {},
@@ -6202,6 +6520,13 @@
     "    km = KMeans(n_clusters=k)\n",
     "    km = km.fit(toronto_grouped_clustering)\n",
     "    Sum_of_squared_distances.append(km.inertia_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below is a plot of sum of squared distances for k in the range specified above. If the plot looks like an arm, then the elbow on the arm is optimal k."
    ]
   },
   {
@@ -6228,6 +6553,13 @@
     "plt.ylabel('Sum_of_squared_distances')\n",
     "plt.title('Elbow Method For Optimal k')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "K = 6 is optimal"
    ]
   },
   {
@@ -6280,6 +6612,13 @@
    "outputs": [],
    "source": [
     "neighborhoods_crime_sorted.drop('Cluster Labels', axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create a new dataframe that includes the cluster as well as the top 10 crime incidents for each neighborhood."
    ]
   },
   {
@@ -6515,6 +6854,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Visualize the resulting clusters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 186,
    "metadata": {},
@@ -6556,6 +6902,27 @@
     "        fill_opacity=0.7).add_to(map_clusters)\n",
     "       \n",
     "map_clusters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Examine Clusters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we can examine each cluster and determine the discriminating crime categories that distinguish each cluster. Based on the defining categories, we can then assign a name to each cluster."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cluster 1"
    ]
   },
   {
@@ -6934,6 +7301,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cluster 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 204,
    "metadata": {},
@@ -7306,6 +7680,13 @@
    ],
    "source": [
     "toronto_merged.loc[toronto_merged['Cluster Labels'] == 1, toronto_merged.columns[[0] + list(range(3, toronto_merged.shape[1]))]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cluster 3"
    ]
   },
   {
@@ -8788,6 +9169,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cluster 4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 206,
    "metadata": {},
@@ -9163,6 +9551,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cluster 5"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 207,
    "metadata": {},
@@ -9535,6 +9930,13 @@
    ],
    "source": [
     "toronto_merged.loc[toronto_merged['Cluster Labels'] == 4, toronto_merged.columns[[0] + list(range(3, toronto_merged.shape[1]))]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cluster 6"
    ]
   },
   {
